--- a/gem/styles/gem-springster/modules/section/_m-section-teaser-listing.scss
+++ b/gem/styles/gem-springster/modules/section/_m-section-teaser-listing.scss
@@ -21,7 +21,7 @@
     }
   }
 }
-@each $name, $color in $color_scheme {
+@each $name, $color in $section_color_scheme {
   .section-teaser-listing-header--#{$name} {
     background-color: $color;
   }
