--- a/gem/styles/gem-springster/state/section/_s-section-teaser-listing.scss
+++ b/gem/styles/gem-springster/state/section/_s-section-teaser-listing.scss
@@ -1,8 +1,9 @@
 .section-teaser-listing-header {
   @include grid(100%);
   margin: 8px 8px 0;
-  padding: 65px 0;
+  padding: 64px 0;
   max-height: 128px;
+  overflow: hidden;
   .heading__section {
     @include column($grid-six);
     position: absolute;
