--- a/gem/styles/gem-springster/utilities/_colors.scss
+++ b/gem/styles/gem-springster/utilities/_colors.scss
@@ -1,9 +1,4 @@
 
-$mustard: #edbf40;
-$turquoise-blue: #0fbfbf;
-$tangerine: #ff9966;
-$pink: #ef5274;
-
 $white: #fff;
 $black: #000;
 $springster-purple: #7300ff;
@@ -28,32 +23,21 @@ $peach-two: #ff9f73;
 $carnation: lighten( #ff7190, 10% );
 $pale-lilac: #e3ccff;
 $red: #D0011B;
+$mustard: #edbf40;
+$turquoise-blue: #0fbfbf;
+$tangerine: #ff9966;
+$pink: #ef5274;
 
-$color_scheme: (
+$menu_color_scheme: (
+  my-body: $light-gold,
+  my-life: $tiffany-blue,
+  my-future: $peach-two,
+  girl-stories: $carnation,
+);
+
+$section_color_scheme: (
   my-body: $mustard,
   my-life: $turquoise-blue,
   my-future: $tangerine,
   girl-stories: $pink,
-
-  white: $white,
-  black: $black,
-  springster-purple: $springster-purple,
-  springster-purple-light: $springster-purple-light,
-  mint-green: $mint-green,
-  sunny-yellow: $sunny-yellow,
-  mint-green-light: $mint-green-light,
-  pale-grey: $pale-grey,
-  bright-orange: $bright-orange,
-  peach: $peach,
-  pale-grey-two: $pale-grey-two,
-  cool-grey: $cool-grey,
-  steel: $steel,
-  slate-grey: $slate-grey,
-  gunmetal: $gunmetal,
-  charcoal-grey: $charcoal-grey,
-  light-gold: $light-gold,
-  tiffany-blue: $tiffany-blue,
-  peach-two: $peach-two,
-  carnation: $carnation,
-  pale-lilac: $pale-lilac,
 );
